added sub section

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     Grow your profit and 
                     track your investments
                 </h3>
-                
+
                 <p>
                     Use advanced analytical tools. Clear 
                     TradingView charts let you track current 
@@ -225,6 +225,25 @@
                 <img src="img/Table.png" alt="">
             </div>
        </div>
+    </section>
+
+    <section class="sub">
+        <div class="sub_box">
+            <div class="sub_text">
+                <h3>
+                    Start mining now
+                </h3>
+                <p>
+                    Join now with CRAPPO to get the 
+                    latest news and start mining now
+                </p>
+            </div>
+
+            <div class="sub_input">
+                <input type="email" name="" id="" placeholder="Enter your email">
+                <button>Subscribe</button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
