added footer section

--- a/index.html
+++ b/index.html
@@ -245,5 +245,58 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer_contents">
+            <div class="contents_one">
+                <img src="img/Logo.png" alt="Crappo Logo">
+                <p>CRAPPO</p>
+            </div>
+
+            <div class="contents_two">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li>Home</li>
+                    <li>Products</li>
+                    <li>About</li>
+                    <li>Features</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+
+            <div class="contents_three">
+                <h3>Resources</h3>
+                <ul>
+                    <li>Download Whitepapper</li>
+                    <li>Smart Token</li>
+                    <li>Blockchain Explorer</li>
+                    <li>Crypto API</li>
+                    <li>Interest</li>
+                </ul>
+            </div>
+
+            <div class="contents_four">
+                <p>We accept following</p>  
+                <p>payment systems</p> 
+                <div class="accept_icons">
+                    <img src="img/Visa.png" alt="">
+                    <img src="img/Mastercard.png" alt="">
+                    <img src="img/Bitcoin.png" alt="">
+
+                </div>
+            </div>
+        </div>
+        <div class="footer_bottom">
+            <p>&copy;2021 CRAPPO. All rights reserved</p>
+
+            <div class="bottom_icons">
+                <img src="img/facebook-f 1.png" alt="">
+                <img src="img/instagram 1.png" alt="">
+                <img src="img/youtube 1.png" alt="">
+                <img src="img/twitter 1.png" alt="">
+                <img src="img/linkedin 1.png" alt="">
+            
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
